--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,9 @@ after_failure:
   - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
   - ./send.sh failure $WEBHOOK_URL
+
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API
+  on:
+    branch: main
